tests/ui/enum/nested-enum.stderr
error: `enum` definition cannot be nested inside `enum`
  --> $DIR/nested-enum.rs:2:5
   |
LL |     enum Bar { Baz },
   |     ^^^^------------
   |     |
   |     help: consider creating a new `enum` definition instead of nesting

error: `struct` definition cannot be nested inside `enum`
  --> $DIR/nested-enum.rs:3:5
   |
LL |     struct Quux { field: u8 },
   |     ^^^^^^-------------------
   |     |
   |     help: consider creating a new `struct` definition instead of nesting

error: `union` definition cannot be nested inside `enum`
  --> $DIR/nested-enum.rs:4:5
   |
LL |     union Wibble { field: u8 },
   |     ^^^^^---------------------
   |     |
   |     help: consider creating a new `union` definition instead of nesting

error: aborting due to 3 previous errors

